# FLArE

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FLArE.cc  Makefile  README.md  cmake_install.cmake  local_setup.sh  lxplus_setup.sh
GridUtils/dune-gpvms/nue/: nue_job.sh
GridUtils/dune-gpvms/numu/: README.md  batch_script.sh  glob_output.sh  numu_job.sh
GridUtils/dune-gpvms/nutau/: nutau_job.sh
GridUtils/dune-gpvms/single_particle/: batch_script.sh  gen_jobfile.sh  gen_muons.sh
GridUtils/lxplus/: README.md  example.sh  example.sub
GridUtils/lxplus/nujobs/: batch_script.sh  merge_outputs.sh  nu_job.sh
GridUtils/nue/: batch_script.sh  submit.sh
GridUtils/numu/: README.md  batch_script.sh  merge_outputs.sh  numu_job.sh  submit.sh
GridUtils/nutau/: batch_script.sh  nutau_job.sh
GridUtils/single_particle/: batch_script.sh  gen_jobfile.sh  gen_muons.sh  muon_job.sh  submit.sh
analysis/: feature_extraction.ipynb  multiplicity.ipynb  numu.ipynb
analysis/evd/: plot_evd.C
analysis/gdml/: geoDisplay.C  materialDisplay.C  nd_hall_only_lar.gdml  nd_hall_only_lar.root
backgrounds/: background_input.root
backgrounds/muons/: mu_fluence_histograms.root  mu_flux_histograms.root
backgrounds/neutrons/: n_fluence_histograms.root  n_flux_histograms.root
backgrounds/scripts/: README.md  extract_fluence_data.C  extract_flux_data.C  make_fluence_histos.C  make_generator_input.C  make_muon_fluence_histos.C  make_muon_flux_histos.C  make_neutron_fluence_histos.C  make_neutron_flux_histos.C
genie/: README.md  nutau_ar40_100GeV.ghep.root
genie/dune/: LBNFFlux.xml  genie_job.sh
include/: ActionInitialization.hh  AnalysisManager.hh  AnalysisManagerMessenger.hh  BackgroundPrimaryGeneratorAction.hh  DetectorConstruction.hh  DetectorConstructionMaterial.hh  DetectorConstructionMessenger.hh  EventAction.hh  FLArEDetectorConstruction.hh  FLArEDetectorConstructionMessenger.hh  FLArEPhysicsList.hh  FLArETrackInformation.hh  FLArETrackingAction.hh  FPFNeutrino.hh  FPFParticle.hh  GENIEPrimaryGeneratorAction.hh  HepMCPrimaryGeneratorAction.hh  LArBoxDetectorConstruction.hh  LArBoxHit.hh  LArBoxSD.hh  LinkDef.h  PixelMap.hh  PixelMap3D.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  PrimaryParticleInformation.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
include/fields/: BabyMINDMagneticField.hh
include/generators/: BackgroundGenerator.hh  BackgroundGeneratorMessenger.hh  GENIEGenerator.hh  GENIEGeneratorMessenger.hh  GPSGenerator.hh  GeneratorBase.hh  HepMCGenerator.hh  HepMCGeneratorMessenger.hh
include/geometry/: BabyMINDDetectorConstruction.hh  DUNENDLArDetectorConstruction.hh  FASER2DetectorConstruction.hh  FASERnu2DetectorConstruction.hh  FLArEDetectorConstruction.hh  FLArEHadCatcherMuonFinderConstruction.hh  FLArETPCDetectorConstruction.hh  FORMOSADetectorConstruction.hh  GeometricalParameters.hh  SamplingCalorimeterConstruction.hh  SpectrometerMagnetConstruction.hh
include/reco/: CircleFit.hh  Cluster3D.hh  Hough2P.hh  LinearFit.hh  PCAAnalysis3D.hh  ShowerLID.hh
include/utils/: range.hh
macros/: LAr_e-.mac  LAr_mu-.mac  LKr_mu-.mac  LKr_tau-.mac  backgrounds.mac  basic.mac  dark_photon_hepmc.mac  dark_photon_hepmc2.mac  gps.mac  nu_genie.mac  nue_genie.mac  numu_genie.mac  nutau_genie.mac  vis.mac
macros/geometry_options/: FASER2_CP_only.mac  FASER2_only.mac  FASER2_only_CP.mac  FLArE_FASER2_only.mac  FLArE_FASER2_only_0.5T.mac  FLArE_only.mac  FLArE_only_BabyMIND.mac  FPF_hall_Option1a_FORMOSAlast.mac  FPF_hall_Option1a_FORMOSAlast_BabyMIND.mac  FPF_hall_Option1a_FORMOSAlast_CP.mac  FPF_hall_Option1a_FORMOSAlast_CP_BabyMIND.mac  FPF_hall_Option1a_FORMOSAlast_newgap.mac  FPF_hall_Option1b_FORMOSAunder.mac  FPF_hall_Option1b_FORMOSAunder_CP.mac  FPF_hall_Option1b_FORMOSAunder_newgap.mac  FPF_hall_Option2_FASERnufirst.mac  FPF_hall_Option2_FASERnufirst_CP.mac  FPF_hall_Option2_FASERnufirst_newgap.mac  FPF_hall_Option2_squeezed.mac  FPF_hall_Option2_squeezed_CP.mac  FPF_hall_Option2_squeezed_newgap.mac  FPF_hall_Reference.mac  FPF_hall_Reference_CP.mac  FPF_hall_Reference_newgap.mac  NuTeV-like_only.mac  argon_cubic.mac  test.mac
macros/legacy/: LAr_e-.mac  LAr_mu-.mac  LAr_tau-.mac  LKr_e-.mac  LKr_mu-.mac  LKr_tau-.mac
macros/nutev_studies/: nue_genie.mac  numu_genie.mac  nutau_genie.mac
macros/single_particle/: LAr_Kminus_mono.mac  LAr_e-_mono.mac  LAr_gamma_mono.mac  LAr_mu-_mono.mac  LAr_neutron_mono.mac  LAr_pi0_mono.mac  LAr_piminus_mono.mac  LAr_proton_mono.mac  LAr_tau-_mono.mac
src/: ActionInitialization.cc  AnalysisManager.cc  AnalysisManagerMessenger.cc  BackgroundPrimaryGeneratorAction.cc  DetectorConstruction.cc  DetectorConstructionMaterial.cc  DetectorConstructionMessenger.cc  EventAction.cc  FLArEDetectorConstruction.cc  FLArEDetectorConstructionMessenger.cc  FLArEPhysicsList.cc  FLArETrackInformation.cc  FLArETrackingAction.cc  FPFNeutrino.cc  FPFParticle.cc  GENIEPrimaryGeneratorAction.cc  HepMCPrimaryGeneratorAction.cc  LArBoxDetectorConstruction.cc  LArBoxHit.cc  LArBoxSD.cc  PixelMap.cc  PixelMap3D.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  PrimaryParticleInformation.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
src/fields/: BabyMINDMagneticField.cc
src/generators/: BackgroundGenerator.cc  BackgroundGeneratorMessenger.cc  GENIEGenerator.cc  GENIEGeneratorMessenger.cc  GPSGenerator.cc  HepMCGenerator.cc  HepMCGeneratorMessenger.cc
src/geometry/: BabyMINDDetectorConstruction.cc  DUNENDLArDetectorConstruction.cc  FASER2DetectorConstruction.cc  FASERnu2DetectorConstruction.cc  FLArEDetectorConstruction.cc  FLArEHadCatcherMuonFinderConstruction.cc  FLArETPCDetectorConstruction.cc  FORMOSADetectorConstruction.cc  G03ColorReader.cc  G03ColorWriter.cc  GeometricalParameters.cc  SamplingCalorimeterConstruction.cc  SpectrometerMagnetConstruction.cc
src/reco/: CircleFit.cc  Cluster3D.cc  Hough2P.cc  LinearFit.cc  PCAAnalysis3D.cc  ShowerLID.cc
